# radbondi

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.md  custom_cooling.md  paper_reproduction.md  physics.md  scheme.md  usage.md
examples/: 01_quickstart.py  02_paper_sweep.py  03_feedback.py  04_custom_cooling.py  _make_summary.py  _rerun_tight.py  _run_paper_sweep.sh  _run_paper_sweep_order1.sh  _verify_paper_sweep.py
examples/paper_sweep_output/: SUMMARY.md  mbh_logM-10.00.npz  mbh_logM-10.50.npz  mbh_logM-11.00.npz  mbh_logM-11.50.npz  mbh_logM-12.00.npz  mbh_logM-12.50.npz  mbh_logM-13.00.npz  mbh_logM-13.30.npz  mbh_logM-13.50.npz  mbh_logM-14.00.npz  mbh_logM-14.30.npz  mbh_logM-14.52.npz  mbh_logM-15.00.npz  mbh_logM-15.10.npz  mbh_logM-15.30.npz  mbh_logM-15.60.npz  mbh_logM-16.00.npz  mbh_logM-16.10.npz
src/radbondi/: __init__.py  ambient.py  bondi.py  constants.py  diagnostics.py  grid.py  hydro.py  ode.py  presets.py  solution.py  solver.py
src/radbondi/cooling/: __init__.py  base.py  bremsstrahlung.py  pair_annihilation.py
src/radbondi/feedback/: __init__.py  diffusion.py  mlt.py
tests/: conftest.py  test_ambient.py  test_api.py  test_bondi.py  test_constants.py  test_cooling.py  test_feedback.py  test_microphysics.py  test_ode.py  test_solver.py  test_validation.py
